--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,17 @@ input[type=radio].visually-hidden {
   color: #181920;
 }
 
+.header__navigation-menu-item:hover {
+  color: rgba(24, 25, 32, 0.75);
+}
+
+.header__navigation-menu-item--current {
+  display: block;
+  font-size: 20px;
+  line-height: 30px;
+  color: #2d52da;
+}
+
 .header__navigation-list {
   display: flex;
   flex-direction: column;
@@ -115,9 +126,39 @@ input[type=radio].visually-hidden {
   color: rgba(24, 25, 32, 0.5);
 }
 
+.header__navigation-item:hover {
+  color: rgba(24, 25, 32, 0.3);
+}
+
 .typography__main {
-  padding-left: 250px;
   position: relative;
+  margin-left: 250px;
+  padding: 80px 30px;
+}
+
+.typography__main-header {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  padding-bottom: 80px;
+  margin-bottom: 80px;
+  border-bottom: 1px solid rgba(24, 25, 32, 0.1);
+}
+
+.typography__header-headline {
+  padding: 0;
+  margin: 0;
+  width: 683px;
+  font-size: 90px;
+  line-height: 90px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.typography__header-subtitle {
+  width: 683px;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
