небольшие правки и новый html файл

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ input[type=radio].visually-hidden {
   overflow: hidden;
 }
 
-.typography__flex-container {
+.flex-container {
   position: relative;
   display: flex;
   margin: 0;
@@ -58,7 +58,7 @@ input[type=radio].visually-hidden {
   min-height: 100vh;
 }
 
-.typography__header {
+.header {
   position: fixed;
   margin: 0;
   padding: 0;
@@ -136,6 +136,8 @@ input[type=radio].visually-hidden {
 }
 
 .typography__main {
+  width: 100%;
+  box-sizing: border-box;
   position: relative;
   margin-left: 250px;
   padding: 80px 30px;
@@ -164,6 +166,8 @@ input[type=radio].visually-hidden {
   width: 683px;
   font-size: 20px;
   line-height: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 .typography__tittle-style {
@@ -472,6 +476,40 @@ input[type=radio].visually-hidden {
 .typography__span-link-a:hover,
 .typography__span-link-a:focus {
   color: rgba(45, 82, 218, 0.75);
+}
+
+.form-elements__main {
+  width: 100%;
+  position: relative;
+  margin-left: 250px;
+  padding: 80px 30px;
+}
+
+.form-elements__main-header {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  padding-bottom: 80px;
+  margin-bottom: 80px;
+  border-bottom: 1px solid rgba(24, 25, 32, 0.1);
+}
+
+.form-elements__header-headline {
+  padding: 0;
+  margin: 0;
+  width: 683px;
+  font-size: 90px;
+  line-height: 90px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.form-elements__header-subtitle {
+  width: 683px;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
