--- a/css/style.scss
+++ b/css/style.scss
@@ -85,7 +85,6 @@ input[type="radio"].visually-hidden {
       margin: 0;
       padding: 0;
       min-height: 100vh;
-
 }
 
 .header {
@@ -173,10 +172,15 @@ input[type="radio"].visually-hidden {
 
 .typography__main {
       width: 100%;
-      box-sizing: border-box;
       position: relative;
       margin-left: 250px;
       padding: 80px 30px;
+}
+
+.typography__main-container {
+      width: 1039px;
+      margin: 0 auto;
+      padding: 0;
 }
 
 .typography__main-header {
@@ -531,6 +535,12 @@ input[type="radio"].visually-hidden {
       margin-left: 250px;
       padding: 80px 30px;
 }
+.form-elements__main-container {
+      width: 1039px;
+      margin: 0 auto;
+      padding: 0;
+}
+
 
 .form-elements__main-header {
       display: flex;
