--- a/css/style.css
+++ b/css/style.css
@@ -1291,6 +1291,9 @@ input[type=radio].visually-hidden {
   border-color: rgba(24, 25, 32, 0.1);
   transition: all 0.1s ease-in-out;
   cursor: pointer;
+  padding: 9px 50px 9px 15px;
+  font-size: 17px;
+  line-height: 25px;
 }
 
 .form-elements__field-ordinary-select2 {
@@ -1301,6 +1304,9 @@ input[type=radio].visually-hidden {
   border-color: rgba(24, 25, 32, 0.1);
   transition: all 0.1s ease-in-out;
   cursor: pointer;
+  padding: 9px 50px 9px 15px;
+  font-size: 17px;
+  line-height: 25px;
 }
 
 .form-elements__field-icon-select1 {
@@ -1311,6 +1317,9 @@ input[type=radio].visually-hidden {
   border-color: rgba(24, 25, 32, 0.1);
   transition: all 0.1s ease-in-out;
   cursor: pointer;
+  padding: 9px 50px 9px 15px;
+  font-size: 17px;
+  line-height: 25px;
 }
 
 .form-elements__field-icon-select2 {
@@ -1321,6 +1330,9 @@ input[type=radio].visually-hidden {
   border-color: rgba(24, 25, 32, 0.1);
   transition: all 0.1s ease-in-out;
   cursor: pointer;
+  padding: 9px 50px 9px 15px;
+  font-size: 17px;
+  line-height: 25px;
 }
 
 .form-elements__field-blocked-select1 {
@@ -1331,6 +1343,9 @@ input[type=radio].visually-hidden {
   border-color: rgba(24, 25, 32, 0.1);
   transition: all 0.1s ease-in-out;
   cursor: pointer;
+  padding: 9px 50px 9px 15px;
+  font-size: 17px;
+  line-height: 25px;
 }
 
 .form-elements__field-blocked-select2 {
@@ -1341,6 +1356,9 @@ input[type=radio].visually-hidden {
   border-color: rgba(24, 25, 32, 0.1);
   transition: all 0.1s ease-in-out;
   cursor: pointer;
+  padding: 9px 50px 9px 15px;
+  font-size: 17px;
+  line-height: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
