--- a/css/style.scss
+++ b/css/style.scss
@@ -1365,6 +1365,10 @@ input[type="radio"].visually-hidden {
       border-color: rgba(24, 25, 32, .1);
       transition: all .1s ease-in-out;
       cursor: pointer;
+      padding: 9px 50px 9px 15px;
+      font-size: 17px;
+      line-height: 25px;
+
 }
 
 .form-elements__field-ordinary-select2 {
@@ -1375,6 +1379,9 @@ input[type="radio"].visually-hidden {
       border-color: rgba(24, 25, 32, .1);
       transition: all .1s ease-in-out;
       cursor: pointer;
+      padding: 9px 50px 9px 15px;
+      font-size: 17px;
+      line-height: 25px;
 }
 
 .form-elements__field-icon-select1 {
@@ -1385,6 +1392,9 @@ input[type="radio"].visually-hidden {
       border-color: rgba(24, 25, 32, .1);
       transition: all .1s ease-in-out;
       cursor: pointer;
+      padding: 9px 50px 9px 15px;
+      font-size: 17px;
+      line-height: 25px;
 }
 
 .form-elements__field-icon-select2 {
@@ -1395,6 +1405,9 @@ input[type="radio"].visually-hidden {
       border-color: rgba(24, 25, 32, .1);
       transition: all .1s ease-in-out;
       cursor: pointer;
+      padding: 9px 50px 9px 15px;
+      font-size: 17px;
+      line-height: 25px;
 }
 
 .form-elements__field-blocked-select1 {
@@ -1405,6 +1418,9 @@ input[type="radio"].visually-hidden {
       border-color: rgba(24, 25, 32, .1);
       transition: all .1s ease-in-out;
       cursor: pointer;
+      padding: 9px 50px 9px 15px;
+      font-size: 17px;
+      line-height: 25px;
 }
 
 .form-elements__field-blocked-select2 {
@@ -1415,4 +1431,7 @@ input[type="radio"].visually-hidden {
       border-color: rgba(24, 25, 32, .1);
       transition: all .1s ease-in-out;
       cursor: pointer;
+      padding: 9px 50px 9px 15px;
+      font-size: 17px;
+      line-height: 25px;
 }
